2005-02-17  Murray Cumming  <murrayc@murrayc.com>

	* rndesktop.xml, rnapplets.xml: Tidied up the new text, to make it 
	shorter, and to remove obscure techy stuff.

2005-02-15  Davyd Madeley  <davyd@madeley.id.au>

	* release-notes.xml:
	* rndesktop.xml:
	* rnapplets.xml: Start updating content.

2005-02-05  Murray Cumming  <murrayc@murrayc.com>

	* regexxer-ed the version numbers so that we mentin 2.10 instead of 
	2.8.
	* release-notes.xml: Edited the sentencess about new stuff and 
	expected stuff.

2005-02-03  Murray Cumming  <murrayc@murrayc.com>

	* Created initial 2.10 release notes as a copy of the 2.8 
	release notes, with no changes at all yet. Do not use this just 
	because jdub is investigating the use of the Wiki instead.
