@@ -86,7 +86,7 @@
   <para>
    The weather monitor can now show even more locations then before, and the 
    location names have been translated into non-english languages where appropriate.
-   In addition, the forecast now includes sunrise and sunset calculations for most locations.</para>
+   In addition, the forecast now includes sunrise and sunset calculations for most locations.
 
    <!-- figure id="rnscreenshot-panel-applet-weather">
    FIXME
