@@ -7,35 +7,38 @@
 <sect2 id="rnutilities">
   <title>Applications</title>
 
-  <sect3 id="rnevolution">
-    <title>Evolution</title>
+  <sect3 id="rntotem">
+    <title>Video Player</title>
    
    <para>
-   GNOME &version; now includes Evolution 2.0, the integrated Email and Groupware
-   client. Evolution supports traditional mail setups, as well
-   as Novell Groupwise and Microsoft Exchange. With Evolution you can read, write, 
-   and manage your emails, contacts, and calendar events.
-   </para>
-
-   <para>Evolution is already well known and successful, but this new version has some extra features, such as: 
-     <itemizedlist>
-     <listitem><para>Support for Novell Groupwise and Microsoft Exchange.</para></listitem>
-     <listitem><para>Support for S/MIME, for authentication and encryption.</para></listitem>
-     <listitem><para>View multiple sets of appointments on one calendar.</para></listitem>
-     <listitem><para>Support for online calendars, in the Webcal format.</para></listitem>
-     <listitem><para>Improved offline support for IMAP accounts.</para></listitem>
-     <listitem><para>Support for Usenet newsgroups (NNTP).</para></listitem>
-     <listitem><para>Junk mail filtering, via SpamAssassin.</para></listitem>
-     <listitem><para>Many user interface improvements.</para></listitem>
-     </itemizedlist>
-
-
-   <figure id="rnscreenshot-evolution">
-      <title>The email client</title>
+   GNOME &version; now includes the popular Totem video player, using GNOME's GStreamer multimedia framework. Totem provides the intuitive user interface that GNOME users expect, with automatic hardware detection instead of complex configuration.
+ 
+   <figure id="rnscreenshot-totem">
+      <title>The video player</title>
       <screenshot>
         <mediaobject>
-          <imageobject><imagedata fileref="&urlfiguresbase;figure-evolution-mail.png" format="PNG"/></imageobject>
-          <textobject><phrase>The Evolution email client.</phrase></textobject>
+          <imageobject><imagedata fileref="&urlfiguresbase;figure-totem.png" format="PNG"/></imageobject>
+          <textobject><phrase>The Totem video player.</phrase></textobject>
+        </mediaobject>
+      </screenshot>
+    </figure>
+
+   </para>    
+
+  </sect3>
+
+  <sect3 id="rnsoundjuicer">
+    <title>Audio Extraction</title>
+   
+   <para>
+   The much-loved Sound Juicer "CD ripper" easily extracts audio from CDs for later playback on your PC or portable music player. Thanks to automatic downloading of song titles, you won't need to click more than a couple of buttons.
+   
+   <figure id="rnscreenshot-soundjuicer">
+      <title>The audio extractor</title>
+      <screenshot>
+        <mediaobject>
+          <imageobject><imagedata fileref="&urlfiguresbase;figure-soundjuicer.png" format="PNG"/></imageobject>
+          <textobject><phrase>The audio extractor.</phrase></textobject>
         </mediaobject>
       </screenshot>
     </figure>
@@ -47,21 +50,12 @@
   <sect3 id="rnbrowser">
     <title>Web Browser</title>
 
-    <para>GNOME's &quot;Epiphany&quot; web browser, based on Mozilla, has some more enhancements. For instance, working with bookmarks is now even easier:
+    <para>TODO. GNOME's &quot;Epiphany&quot; web browser, based on Mozilla, has some more enhancements. For instance, working with bookmarks is now even easier:
     <itemizedlist>
     <listitem><para>Bookmarks toolbars are easier to manipulate.</para></listitem>
     <listitem><para>Bookmarks hierarchies are preserved when importing.</para></listitem>
     <listitem><para>Topics can be added directly from the new bookmark dialog.</para></listitem>
     <listitem><para>Whole bookmarks folders can be opened in tabs.</para></listitem>
-    </itemizedlist>
-    </para>
-
-    <para>Other web browser improvements include:
-    <itemizedlist>
-    <listitem><para>Popup windows can now be blocked for specific web sites.</para></listitem>
-    <listitem><para>There is now an offline mode.</para></listitem>
-    <listitem><para>System administrators can now lockdown more features.</para></listitem>
-    <listitem><para>Users can subscribe to  Webcal online calendars in Evolution by clicking on their links in the web browser.</para></listitem>
     </itemizedlist>
     </para>
    
